feat: Add remote MCP server support with HTTP transport and OAuth 2.1
Remote MCP Server Support:
- Add HTTP/Streamable HTTP transport for remote MCP servers
- Support both SSE (Server-Sent Events) and standard HTTP responses
- Claude Code compatible config format (use "type" instead of "transportType")

OAuth 2.1 Authentication:
- Implement MCPOAuthManager with full OAuth 2.1 flow
- Support OAuth metadata discovery (RFC 8414)
- Dynamic Client Registration (RFC 7591) for servers like Linear, Neon
- PKCE (S256) for secure authorization
- Optional client credentials for servers like Box
- Register 'bedrock' URL scheme for OAuth callbacks

Crash Protection:
- Auto-disable MCP after crash detection
- Show warning in Settings when MCP disabled due to crash
- Reset protection when user manually re-enables MCP

Configuration:
- Extend MCPServerConfig with URL, headers, clientId, clientSecret
- Support both "type" and "transportType" for backward compatibility
- Default to stdio transport and enabled=true when not specified

CI/CD:
- Update to macOS 26 and Xcode 26.0
- Add -skipMacroValidation for Swift macro builds
- Manual code signing with Developer ID Application

Other Changes:
- Add MCPServerTests for server connectivity testing
- Refactor SettingsView with OAuth credentials UI
- Improve file monitoring stability in SettingManager
- Remove deprecated SettingsView_Old.swift

--- a/.github/workflows/macos_build.yml
+++ b/.github/workflows/macos_build.yml
@@ -41,8 +41,10 @@ jobs:
       with:
         xcode-version: '26.0'
 
-    # Build Xcode Project for both architectures
+    # Build Xcode Project for both architectures with code signing
     - name: Build Xcode Project
+      env:
+        DEVELOPMENT_TEAM: ${{ secrets.APPLE_TEAM_ID }}
       run: |
         xcodebuild clean build \
           -project "Amazon Bedrock Client for Mac.xcodeproj" \
@@ -52,7 +54,35 @@ jobs:
           -derivedDataPath DerivedData \
           -skipMacroValidation \
           ONLY_ACTIVE_ARCH=NO \
-          ASSETCATALOG_COMPILER_OPTIMIZATION=time
+          ASSETCATALOG_COMPILER_OPTIMIZATION=time \
+          CODE_SIGN_STYLE=Manual \
+          CODE_SIGN_IDENTITY="Developer ID Application" \
+          DEVELOPMENT_TEAM="$DEVELOPMENT_TEAM"
+
+    # Notarize the app
+    - name: Notarize App
+      env:
+        APPLE_ID: ${{ secrets.APPLE_ID }}
+        APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+        APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+      run: |
+        APP_PATH="$(pwd)/DerivedData/Build/Products/Release/Amazon Bedrock.app"
+        
+        # Create a zip for notarization
+        ditto -c -k --keepParent "$APP_PATH" "Amazon_Bedrock.zip"
+        
+        # Submit for notarization
+        xcrun notarytool submit "Amazon_Bedrock.zip" \
+          --apple-id "$APPLE_ID" \
+          --password "$APPLE_APP_PASSWORD" \
+          --team-id "$APPLE_TEAM_ID" \
+          --wait
+        
+        # Staple the notarization ticket to the app
+        xcrun stapler staple "$APP_PATH"
+        
+        # Clean up
+        rm "Amazon_Bedrock.zip"
 
     # Package as DMG
     - name: Package as DMG
@@ -65,6 +95,21 @@ jobs:
         --hide-extension "Amazon Bedrock.app" \
         --app-drop-link 600 185 \
         'Amazon Bedrock Client for Mac.dmg' "$APP_PATH"
+
+    # Notarize the DMG
+    - name: Notarize DMG
+      env:
+        APPLE_ID: ${{ secrets.APPLE_ID }}
+        APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+        APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+      run: |
+        xcrun notarytool submit "Amazon Bedrock Client for Mac.dmg" \
+          --apple-id "$APPLE_ID" \
+          --password "$APPLE_APP_PASSWORD" \
+          --team-id "$APPLE_TEAM_ID" \
+          --wait
+        
+        xcrun stapler staple "Amazon Bedrock Client for Mac.dmg"
 
     # Upload Artifact (for both tags and main branch)
     - name: Upload Artifact
